# Optical-Form-Processing

./: CMakeLists.txt
include/core/: AnswerKey.hpp  BubbleDetector.hpp  CornerFinder.hpp  CornerMemory.hpp  PerspectiveCorrector.hpp  ROIDetector.hpp  ScoreCalculator.hpp
src/: main.cpp
src/core/: AnswerKey.cpp  BubbleDetector.cpp  CornerFinder.cpp  PerspectiveCorrector.cpp  ROIDetector.cpp  ScoreCalculator.cpp
